# zet

.github/workflows/: mayhem.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz.rs  zet-fuzz.rs
mayhem/: Dockerfile  Mayhemfile
src/: main.rs  operands.rs  operations.rs
